--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-GOOGLE_API_KEY = "AIzaSyB4QrfA60jAsGdspa5TEvjdWHP2lbs_skU"
+GOOGLE_API_KEY = "collect it from here : https://makersuite.google.com/app/apikey "
