--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-GOOGLE_API_KEY = " replace with your gemini pro api key, collect it from here : https://makersuite.google.com/app/apikey "
+GOOGLE_API_KEY = " AIzaSyAZNiLH-wqNPkl1OtPRkD0BqMPeCAM1gjE " 
